# biocat

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_interface.bat
docs/: CUSTOM_FUNCTIONS.md  DBMS_Project_Report.md  INTERFACE_README.md
sql/: create_biocat_db.sql  functions.sql  sample_data.sql
src/: app.py  config_example.py  database.py  dna_visualization.py  launch.py  sql_queries.py
tests/: test_custom_functions.py
