[project]
name = "biocat-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.80",
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "mysql-connector-python>=8.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0",
]
